--- a/front/src/pages/PromptEditor/styles.module.scss
+++ b/front/src/pages/PromptEditor/styles.module.scss
@@ -45,4 +45,8 @@
             background-color: rgba(154, 154, 154, 0.2);
         }
     }
+
+    .save-button {
+        // background-color: blue;
+    }
 }
