--- a/front/src/pages/PromptTreeModal/styles.module.scss
+++ b/front/src/pages/PromptTreeModal/styles.module.scss
@@ -8,41 +8,18 @@
     box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
 
     font-size : 0.9rem;
+}
 
-    .node,
-    .node-directory {
-        cursor: pointer;
-        padding-left : 0.1em;
-
-        &:hover {
-            background-color: var(--prompt-tree-hover-bgcolor);
-        }
-        &.edited {
-            color: var(--edited-prompt-item-color);
-        }
-        &.added {
-            color: var(--added-prompt-item-color);
-        }
-        &.fixed {
-            cursor: unset;
-        }
-    }
-
-    .node-children {
-        display: block;
-        position: relative;
-        .node {
-            padding-left: 1.1em;
-        }
-        &::after {
-            content: "";
-            position: absolute;
-            left: 0.5em;
-            top: 0;
-            width: 1px;
-            height: 100%;
-            background-color: rgb(163, 163, 163);
-        }
-    }
-
+.drag-indicator {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding : 0px 8px;
+    background-color: var(--prompt-tree-drag-indicator-color);
+    z-index: 1;
+    pointer-events: none;
+    z-index: 1000;
+    font-size : 0.8rem;
+    background-color: rgba(37, 37, 37, 0.75);
+    border-radius: 12px;
 }
