--- a/front/src/components/Forms/styles.scss
+++ b/front/src/components/Forms/styles.scss
@@ -30,3 +30,10 @@ button.form-button {
         background-color: rgb(51, 56, 63);
     }
 }
+
+.string-form {
+    input.warn {
+        border-color: rgb(159, 0, 0);
+    }
+
+}
