DESIGN : 세션 색상 수정

--- a/front/src/pages/Home/layout/SessionTabBar/styles.module.scss
+++ b/front/src/pages/Home/layout/SessionTabBar/styles.module.scss
@@ -56,11 +56,12 @@
         
         @keyframes color-transition {
             0% {
-                color: rgb(237, 231, 194);
+                color: rgb(255, 211, 150);
             }
             100% {
                 // color: rgb(216, 201, 101);
-                color: rgb(223, 210, 128);
+                color: rgb(232, 255, 142);
+                // color: rgb(223, 210, 128);
             }
         }
     }
