--- a/front/src/components/MarkdownArea/markdown.scss
+++ b/front/src/components/MarkdownArea/markdown.scss
@@ -20,8 +20,8 @@
   overflow-wrap: break-word;
 
   p {
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 1em;
     color: var(--normal);
   }
 
