FIX : 화면 테마에 따른 텍스트 문제 수정

--- a/front/src/assets/style/theme.scss
+++ b/front/src/assets/style/theme.scss
@@ -115,3 +115,8 @@
     --history-input-color: white;
     --history-output-color: rgb(187, 187, 187);
 }
+
+#app {
+    // background-color: var(--bgcolor);
+    color: var(--text-color);
+}
