--- a/packages/front/src/assets/style/theme.scss
+++ b/packages/front/src/assets/style/theme.scss
@@ -51,6 +51,7 @@
     /* 범용 텍스트 색상 */
     --text-color: white;
     --text-color-secondary: rgb(192, 192, 192);
+    --dimmed-text-color: grey;
     --text-color-subtle: rgb(102, 102, 102);
     --subtext-color: rgb(180, 180, 172);
     --text-highlight-color: rgb(56, 139, 241);
